--- a/styles/style.css
+++ b/styles/style.css
@@ -22,49 +22,49 @@
   /* выше установили ограничения для секции */
 }
 
-.logo{
+.logo{            /* ставим размер для 2 логотипов яндекс.практикум в хедере и футере */
   width: 228px;
   height: 32px;
 }
 
-.logo_place_header{
-  z-index: 3;
-  background-image: url(../images/logo_place_header.svg);
+.logo_place_header{                /* стиль для логотипа в футере */
+   background-image: url(../images/logo_place_header.svg);
+  /* тут я экспериментировал со свойствами бэкграунда, кажется, что это всё не влияет на результат
   background-origin: border-box;
   background-size: contain;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat;*/
   margin: auto;
   position: absolute;
   top: 30px;
   left: 64px;
-  z-index: 100;
 }
+
 .header__title{
   width: 730px;
-  height: max-content;
   line-height: 96px;
   font-size: 102px;
   font-weight: 700;
-  left: 64px;
-  justify-content: center;
-  margin-left: 64px;
-  z-index: 3;
+  margin: 0 auto 0 64px;
+  padding: 0;
+  z-index: 2; /* делаем заголовок выше картинок в блоке*/
 }
 
 .header__subtitle{
   width: 388px;
-  height: max-content;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
   position: absolute;
   bottom: 30px;
   left: 64px;
-  z-index: 3;
-}
+  margin: 0;
+  padding: 0;
+  z-index: 2; /* делаем подзаголовок выше картинок в блоке*/
+  }
 
 .header__link{
   color: #2f80ed;
+  text-decoration: none;
 }
 
 .header__main-illustration{
@@ -73,7 +73,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  z-index: 1;
+  z-index: 1; /* делаем основную картину выше синего квадрата на фоне*/
 }
 
 .header__square-pic{
@@ -83,19 +83,17 @@
   height: 568px;
   top: 64px;
   right: 0;
-  z-index: 0;
 }
 
 /* Секция Главные проблемы в обучении */
 .description{
-  margin-top: 100px; /* создаем отступ 100px над секцией*/
+  margin-top: 100px;
 }
 
 .two-columns{
   width: 80%;
   justify-content: space-between;
   display: flex;
-  flex-direction: row;
   margin: auto;
 }
 
@@ -105,11 +103,10 @@
   font-size: 18px;
   font-weight: normal;
   color: #2f80ed;
-  margin: 0; /*убираем отступы у заголовка*/
+  margin: 0;
 }
 
-.main-text{ /*три параграфа*/
-  flex-direction: row;
+.two-columns__main-text{ /*три параграфа*/
   min-width: 784px;
   width: 80%;
   font-weight: normal;
@@ -118,7 +115,7 @@
 .two-columns__paragraph{
   line-height: 34px;
   font-size: 24px;
-  margin: 0 auto 30px; /* убираем отступ в начале и ставим отступ после параграфа*/
+  margin: 0 auto 30px;
 }
 
 .two-columns__paragraph:last-of-type{
@@ -126,12 +123,12 @@
 }
 
 .two-columns__span-accent{
-  font-weight: 700; /* делаем жирным слово Вывод*/
+  font-weight: 700;
 }
 
 /* Секция цифры и факты*/
 .digits{
-  margin-top: 100px; /* создаем отступ 100px над секцией*/
+  margin: 100px auto;
 }
 
 .section-title{
@@ -139,6 +136,7 @@
   font-size: 60px;
   width: 60%;
   margin: 0 auto;
+  padding: 0;
   text-align: center;
   font-weight: 700;
 }
@@ -148,14 +146,14 @@
   font-size: 24px;
   font-weight: normal;
   width: 60%;
-  margin: 20px auto 0;
+  margin: 20px auto 0; /* создаем отступ между подзаголовком и заголовком, убираем отступ под подзаголовком*/
+  padding: 0;
   text-align: center;
 }
 
 .table{
   width: 1100px;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 0 auto;
@@ -163,7 +161,7 @@
 
 .table__cell{
   width: 250px;
-  margin: 60px 0 0;
+  margin: 60px 0 0; /* делаем отступ от подзаголовка*/
 }
 
 .table__heading{
@@ -177,69 +175,71 @@
   line-height: 1.15;
   font-size: 18px;
   font-weight: normal;
-  margin: 20px auto 0;
+  margin: 20px auto 0;  /* настраиваем отступ между текстом, убираем отступ под текстом*/
 }
 
 /* секция Фейнман */
 .feynman{
-  margin: 100px 0 0; /* создаем отступ 100px над секцией*/
+  padding: 100px 0 0; /* создаем отступ 100px над секцией c тем же фоном*/
+  margin: 0;
   position: relative;
   height: 890px;
+  background-color: #f2f2f2;
+  z-index: -2; /* нижний слой*/
 }
 
 .feynman__title{
   width: 648px;
   line-height: 1.15;
   font-size: 120px;
-  text-align: center;
   font-weight: 700;
+  text-align: center;
   margin: 0 auto;
 }
 
 .feynman__subtitle{
   line-height: 51px;
   font-size: 36px;
-  text-align: center;
   font-weight: normal;
-  margin: 70px auto;
+  margin: 70px auto 0;
+  text-align: center;
 }
 
 .feynman__link{
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  color: #2f80ed;
+  text-decoration: none;
   position: absolute;
   top: 50%;
   right: 46px;
-  color: #2f80ed;
 }
 
-.feynman__main-illustration{
+.feynman__img{
   width: 867px;
   height: 637px;
   position: absolute;
   left: 0px;
   bottom: 0px;
-  z-index: -1;
+  z-index: -1; /* делаем картинку вторым снизу слоем, чтобы не закрывала фейнмана и тексты, но была выше фона*/
 }
 
 /* секция Кауфман */
 .kaufman{
-  padding: 90px 0; /* создаем отступ 90px над- и под секцией*/
   background-color:#1f1f1f;
-  overflow: hidden; /*убираем показ треугольника справа от видимого экрана*/
+  padding: 90px 0;
+  overflow: hidden;
   position: relative;
-  z-index: -2;
+  z-index: -2; /* делаем фон нижним слоем, чтобы не закрывал треугольник и тексты*/
 }
 
 .section-title_theme_dark{
   color:white;
-
 }
 
 .section-subtitle_theme_dark{
   color:white;
-
 }
 
 .table__cell_theme_dark {
@@ -254,31 +254,33 @@
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: -1;
+  z-index: -1; /* делаем треугольник вторым снизу слоем, чтобы не закрывал тексты*/
 }
 
 .footer{
   background-color:#1f1f1f;
   padding: 60px 0 40px;
-  min-height: 250px;
   position: relative;
-  color:white;
+  color: white;
 }
 
 .footer__columns{
   display: flex;
   width: 90%;
-  flex-direction: row;
   margin: auto;
   justify-content: space-between;
-  align-content: space-between;
-  min-height: 250px;
+  min-height: 250px;  /* по брифу минимальная высота футера - 350px, из них 60+40 занимают внутренние отступы, поэтому задаем 250px*/
+}
+
+.footer__column{
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+
 }
 
 .footer__column_content_copyright{
   flex-basis: 711px;
-  display: flex;
-  flex-direction: column;
   justify-content: space-between;
 }
 
@@ -292,20 +294,15 @@
 .footer__author{
   line-height: 25px;
   font-size: 18px;
-  margin: 18px 0;
+  margin: 18px 0; /* задаем отступ сверху и снизу от копирайта*/
 }
 
-.footer__column_info{
-  display: flex;
-  flex-direction: column;
-  margin: 0;
+.footer__column_content_info{
+  justify-content: flex-start;
 }
 
-.footer__column_social{
-  display: flex;
-  flex-direction: column;
-  list-style: none;
-  margin: 0 0;
+.footer__column_content_social{
+  justify-content: flex-start;
 }
 
 .footer__column-heading{
@@ -325,18 +322,17 @@
 }
 
 .footer__column-link{
-  margin: 0;
   text-decoration: none;
   color: white;
 }
 
-.footer_social-icon{
+.footer__social-icon{
   width: 16px;
   height: 16px;
   padding-right: 10px;
 }
 
-/* стили для визуализации границ блоков
+/* стили для визуализации границ блоков при тестировании
 .test-p{
   background-color:#f497a655
 }
